--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t pineapplesalad/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run pineapplesalad/docker-react npm run test -- --coverage
+  - docker run pineapplesalad/docker-react npm run test --watchAll=false --coverage
