--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ deploy:
   edge: true
   on:
     branch: master
-  access_key_id: $AWS_ACCESS_KEY
+  access_key_id: AKIATEBUBGSZXDMBOWRA
   secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+    secure: 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
