Changed YML config
Updated to the format suggested to solve the issue
here:

https://travis-ci.community/t/deploy-fails-with-aws-
signaturedoesnotmatch/5835/4
by BanzaiMan

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,5 @@ deploy:
   edge: true
   on:
     branch: master
-  access_key_id: "AKIATEBUBGSZXDMBOWRA"
-  secret_access_key:
-    secure: "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"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
